[metadata]
name                            = dmvision
version                         = attr: dmvision.__version__
author                          = Yclept Nemo
author_email                    = pscjtwjdjtAhnbjm/dpn
license                         = GPLv3+
description                     = A scheduling robot for the NJ DMV
long_description                = file: README.rst
long_description_content_type   = text/x-rst
url                             = https://github.com/orbisvicis/dmvision
classifier                      =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications

[options]
python_requires = >=3.9
install_requires =
    python-dateutil
    requests
    selenium
    aiohttp_basicauth
    aiohttp
    pyaudio
    twilio
py_modules =
    dmvision
